static/css/main.css
.main.outer{padding-top: 50px;}
.header-panel.shadow-z-2 {
    background-color: #009691;
    padding: 50px 0 15px 0;
    width: 100%;
}
.full{ font-size: 16px; }
.logo-img {
    width: 56px;
    height: 56px;
    border-radius: 60px;
    margin: 0 auto;
}
.logo-turner {
    font-size: 18px;
    vertical-align: middle;
    text-align: center;
    margin-top: 10px;
    letter-spacing: 2px;
}
.row-content{
    vertical-align: top;
}
.row-picture {
    display: inline-block;
    vertical-align: top;
    margin-right: 10px;
}
@media (min-width: 768px) and (max-width: 1199px) {
  .row-picture {
    margin-bottom: 10px;
  }
}

@media (min-width: 992px) and (max-width: 1199px) {
  .col-md-3 {
    width: 28%;
  }
  .col-md-9 {
    width: 72%;
  }
}

.row-details {
    display: inline-block;
    vertical-align: middle;
    color: #fff;
}
p.info {
    color: #fff;
}
p.info a {
    color: #fff;
    text-decoration: underline;
}
.full ul,.full ol {
    margin-left: 15px;
}
.full img{
    display: block;
    max-width: 100%;
    height: auto;
}
.social-icons {
    margin: 20px 0 0;
}
.icon {
    background: rgba(255, 255, 255, 0.63);
    border-radius: 100%;
    text-align: center;
    line-height: 20px;
    font-size: 20px;
    color: #009691;
    padding: 5px;
    width: 30px;
    height: 30px;
    display: inline-block;
}
.icon:hover {
    color: rgba(255, 255, 255, 0.63);
    background: #009691;
}

.menu ul li {
    list-style: none;
    margin: 5px 0;
}

.menu ul li a:hover, .menu ul li a:focus, li.current-menu-item > a{
    background: #007d7c;
}
li.current-menu-item:before {
    content: "";
    display: inline-block;
    height: 55px;
    width: 5px;
    position: absolute;
    left: 9px;
    vertical-align: middle;
    background: #6b0050;
}
.menu ul li a {
    font-size: 15px;
    font-weight: normal;
    cursor: pointer;
    display: block;
    text-decoration: none;
    padding: 0 0 0 10px;
    color: #fff;
}
.home-subtitle {
    font-size: 26px;
    margin-bottom: 32px;
    margin-top: 5px;
    color: #01c87b;
    font-weight: 300;
}
h2.blog-title-pro{color: #fff;}
h2.blog-title-pro:after {
    content: "";
    display: block;
    width: 70px;
    height: 4px;
    margin-top: 16px;
    margin-left: 3px;
    background: rgba(255, 255, 255, 0.72);
}
span.tags{ margin: 0 2px;cursor: pointer;display: inline-block;}
.card .card-image .card-image-headline-custom{
    position: absolute;
    margin-bottom: 0;
    bottom: 0px;
    left: 0px;
    width: 100%;
    padding: 5px 0 12px;
    color: #fff;
    font-size: 2em;
    background: -moz-linear-gradient(bottom,  rgba(0,0,0,0) 0%, rgba(0,0,0,0.9) 83%, rgba(0,0,0) 100%);
background: -webkit-linear-gradient(bottom,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.9) 83%,rgba(0,0,0) 100%);
background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%,rgba(0,0,0,0.9) 83%,rgb(0, 0, 0) 100%);
filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#a6000000',GradientType=0 );
}
.card .card-footer a {
    margin: 0 !important;
    position: relative;
    bottom: 25px;
    width: auto;
}
#filters {
    margin: 0 0 25px 0;
}
.list-separator li > a i{
    width: 56px;
    height: 56px;
    text-align: center;
    line-height: 56px;
    font-size: 20px;
}
.error {
    color: #EF7272!important;
    font-size: 12px!important;
}
#portfolio-filter {
        margin-top: 50px;
}
.navbar-toggle i {
    color: #fff;
}
.menu .list-group-item-heading, .menu .list-group-item-text{
    color:#fff!important;
}
@media (max-width: 768px) {
    #portfolio-filter {
        margin-top: 0px;
    }
}
footer {
    border-top: 1px solid #C5C0C0;
    width: 100%;
    height: 10px;
    margin-top: 10px;
    margin-bottom: 3em;
    padding-top: 10px;
    color: #444444;
    font-size: 11px;
    bottom: 0;
    padding-bottom: 10px;
}
.pager li.active a {
    background: rgba(89, 148, 129, 0.3);
}
/** Search input **/
.searchcontrol {
    margin-top: 35px;
    margin-bottom: 0;
}
.searchcontrol input[type=text]{
    color:#fff;
}
.searchcontrol input[type=text]:focus{
    outline: none;
    border: none;
    box-shadow: none;
}

/** Search result dropdown **/
.search__results {
    display: block;
    background: #fff;
    list-style: none;
    padding: 0;
    transition: 0.2s ease;
    position: absolute;
    width: 100%;
    -webkit-box-shadow: 0 8px 17px 0 rgba(0,0,0,.2), 0 6px 20px 0 rgba(0,0,0,.19);
    box-shadow: 0 8px 17px 0 rgba(0,0,0,.2), 0 6px 20px 0 rgba(0,0,0,.19);
    border-radius: 2px;
    border: 0;
    z-index: 999;
}
.search__results.is-hidden {
    opacity: 0;
    transform: translateY(-1vh);
    display: none;
}
.search__results > li {
    border-top: 1px solid #f0f0f0;
    padding: 10px 0;
}
.search__results > li > a {
    padding: 10px;
}
.search__result-date {
    font-size: 12px;
    color: #BBB;
    position: absolute;
    right: 12px;
}

/** Formview **/
#formview{
    width: 70%;
}

 @media (min-width:768px) {
#formview{
    width: 40%;
}
}

#formview textarea {
    height: 10.3em;
}

input, textarea {
    font-size: 0.8em;
    font-family: 'proxima-nova-soft', sans-serif;
    border: 1px solid #ddd;
    background: #fff;
    padding: 0.9em;
    transition: all 0.3s ease-in-out;
    width: 100%;
    box-sizing: border-box;
}

#formview button, a.button {
    font-size: 1em;
    font-weight: 600;
    color: white;
    background: #009691;
    line-height: 1em;
    padding: 0.6em 0.9em;
    transition: all 0.3s ease-in-out;
}

/** Custom **/
.content img {
    margin-top: 2em;
    margin-left: auto;
    margin-right: auto;
}

img.error {
    margin-top: 2em;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 2em;
}

p.legend {
    text-align: center;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 1em;
    font-style: italic;
}

@media (min-width: 768px) {
    .tags-holder{
        position: absolute;
        right: 16px;
        top: 34px;
    }
}
@media (max-width: 768px) {
    .col-md-9.col-xs-12.full .well {
        padding: 19px 10px;
    }
    .list-group .list-group-item {
        padding: 0 10px;
    }
    .list-group-item-text {
        margin-bottom: 5px;
    }
    .list-group .list-group-item .row-content .least-content {
        position: static;
        display: inline;
    }
    .tags-holder{
        position: static;
        display: inline;
        margin-left: 10px;
    }
}

@media (min-width: 768px) {
    .sticky {
        position: -webkit-sticky;
        position: sticky;
        top: 19px;
    }
}

@media (min-width: 768px) and (max-width: 991px) {
    .navbar-collapse {
        padding-right: 0;
        padding-left: 0;
    }
    .nav.navbar-nav {
        float: none;
    }
    .col-sm-4 {
        width: 25%;
    }
    .menu ul li {
        margin: 0 0;
    }
    .sticky {
        top: 0px;
        z-index: 1;
    }
}

.share-page {
    line-height: 10px;
}
.list-group .list-group-item .row-action-primary i {
    background: #30a1bb;
}

.row-content a:visited {
  color: grey;
}

.content a:visited {
  color: #1A7970;
}

